Fixed name not showing on newly created tweet. Created popup menu for tweets to delete

--- a/public/sass/abstracts/_variables.scss
+++ b/public/sass/abstracts/_variables.scss
@@ -2,6 +2,8 @@ $color-primary: #1da1f2;
 $color-primary-light: #71c9f8;
 $color-primary-dark: #1b95e0;
 
+$color-red: #e0245e;
+
 $color-primary-background: #15202b;
 $color-primary-background-2: #192734;
 $color-secondary-background: #253341;
