--- a/public/sass/components/_tweet.scss
+++ b/public/sass/components/_tweet.scss
@@ -17,8 +17,11 @@
 }
 
 .content {
+  width: 100%;
+
   &__user {
     display: flex;
+    width: 100%;
   }
 
   &__name {
@@ -38,5 +41,73 @@
     font-size: 1.5rem;
     font-weight: 300;
     margin-top: 0.5rem;
+  }
+
+  &__popup {
+    fill: $color-font-dark;
+    height: 1.5rem;
+    width: 1.5rem;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+}
+
+.tweet-popup-container {
+  position: relative;
+  margin-left: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.popup-fill-page {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  overflow: auto;
+  height: 100vh;
+  width: 100vw;
+  z-index: 10;
+  background-color: transparent;
+}
+
+.popup-content {
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  height: fit-content;
+  width: 13rem;
+  z-index: 20;
+  background-color: $color-primary-background;
+  box-shadow: rgba(136, 153, 166, 0.2) 0px 0px 15px,
+    rgba(136, 153, 166, 0.15) 0px 0px 3px 1px;
+  border-radius: 5px;
+
+  &__list {
+    display: flex;
+    padding: 1rem;
+    align-items: center;
+    transition: all 0.2s;
+
+    &:hover {
+      background: $color-secondary-background;
+    }
+  }
+
+  &__delete-icon {
+    fill: $color-red;
+    height: 2rem;
+    width: 2rem;
+    margin-right: 1rem;
+  }
+
+  &__delete-text {
+    color: $color-red;
+    font-size: 1.6rem;
   }
 }
